--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ rev = "c869686"
 x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
 [dependencies]
 anyhow = "1.0.75"
+bytemuck = "1.14.0"
 rand = "0.8.5"
