--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,16 @@ edition = "2021"
 [dependencies.sdl2]
 version = "0.36"
 default-features = false
-features = ["ttf","image","gfx","mixer","static-link","use-vcpkg"]
+features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]
 
 [package.metadata.vcpkg]
-dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
+dependencies = [
+  "sdl2",
+  "sdl2-image[libjpeg-turbo,tiff,libwebp]",
+  "sdl2-ttf",
+  "sdl2-gfx",
+  "sdl2-mixer",
+]
 git = "https://github.com/microsoft/vcpkg"
 rev = "c869686"
 
