store set speed between runs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,7 @@ x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
 
 [dependencies]
 bytemuck = "1.14.0"
+confy = "0.5.1"
 rand = "0.8.5"
 resvg = "0.37.0"
+serde = { version = "1.0.194", features = ["derive"] }
